// Vitest Snapshot v1

exports[`command list config > list configs should list all 1`] = `
"NEO v3.5.2 (​https://github.com/neo-hack/neo​)

[log] Found 1 configs:

[log] neo
[log] CI"
`;

exports[`command list config > list configs should list filtered by preset 1`] = `
"NEO v3.5.2 (​https://github.com/neo-hack/neo​)

[log] Found 1 configs:

[log] CI"
`;
